Fixed: make sure the textarea for text block field is completely visible

--- a/Resources/public/css/views/fieldedit.css
+++ b/Resources/public/css/views/fieldedit.css
@@ -22,7 +22,6 @@
 
 .ez-editfield-input,
 .ez-editfield-input-no-validation {
-    height: 1.8em;
     margin: 1em 2em;
 }
 
